--- a/Writings/abnt/unicamp.sty
+++ b/Writings/abnt/unicamp.sty
@@ -104,16 +104,17 @@
 \noindent
 {\imprimirorientadorRotulo~\imprimirorientador\par}
 \noindent
-\abntex@ifnotempty{\imprimircoorientador}{%
+  {\imprimircoorientadoraRotulo~\imprimircoorientadora}%
+\\
+\vspace*{1cm}
+\noindent
   {\imprimircoorientadorRotulo~\imprimircoorientador}%
-}%
-
 \vspace*{1cm}
 
 \noindent
 \begin{minipage}{.4\textwidth}\SingleSpacing		
 Este exemplar corresponde \`{a} vers\~{a}o final da tese defendida pelo
-	aluno \imprimirautor , e orientada pelo Professor Doutor \imprimirorientador\xspace e pela Professora Doutora \imprimircoorientador\\[4mm]
+	aluno \imprimirautor , e orientada pelo Professor Doutor \imprimirorientador\xspace, pela Professora Doutora \imprimircoorientadora\xspace e pelo Professor Doutor \imprimircoorientador\\[4mm]
 	\rule{\textwidth}{0.2mm} \hfill
 \end{minipage}
 
