--- a/Writings/thesis.tex
+++ b/Writings/thesis.tex
@@ -1,4 +1,4 @@
-% Created 2021-07-12 seg 15:35
+% Created 2021-07-13 ter 18:12
 % Intended LaTeX compiler: pdflatex
 \documentclass[12pt,openright,oneside,a4paper,english,sumario=tradicional]{gpsabntex}
   \usepackage{lipsum}             % Pacote que gera texto dummy
@@ -151,7 +151,8 @@ Instituto de Economia
 \preambulo{Tese apresentada ao Instituto de Economia da Universidade Estadual de Campinas como parte dos requisitos exigidos para a obtenção do t\'{i}tulo de Doutor em Ci\^encias Econ\^omicas.} % Acentos devem ser escritos dessa forma no preambulo
 \titulo{Teste}
 \orientador{Lucas Azeredo da Silva Teixeira}
-\coorientador{Ivette Raymunda Luna Huamani}
+\coorientadora{Ivette Raymunda Luna Huamani}
+\coorientador{Ítalo Pedrosa}
 \newcommand{\ThesisTitle}{{Three Essays in Housing Macroeconomics}}
 \author{Gabriel Petrini}
 \date{2024}
@@ -285,29 +286,355 @@ Conclui-se que a taxa própria de juros dos imóveis explica a taxa de crescimen
 
 
 \chapter{Super abm}
-\label{sec:org0323024}
+\label{sec:org61cf0f9}
 
-\epigraph{The Fed, the European Central Bank and the Bank of Japan together set monetary policy for a zone that accounts for 80 per cent of the world’s
-industrialized economic activity ... Rarely, if ever, can so much power have been wielded by such a small number of institutions sitting outside the
-direct democratic process.}{Goldman Sachs, 2000}
+\epigraph{Text}{Author, Date}
 
 \section{Introduction}
-\label{sec:org3fa734b}
-\subsection{Estrutura do artigo}
-\label{sec:org838aff7}
+\label{sec:orgfc32231}
+There is a relative consensus in the demand-led macroeconomic growth literature that non-residential investment is, at the macroeconomic level, partially induced by income.
+Authors inspired by Sraffian supermultiplier model, on the other hand, state that non-residential investment is fully-induced and is described by the capital adjusment principle.
+As a consequence, this model predict a positive correlational relation between investment share and economic growth while capacity utilization rate is trend-stationary in the long-run.
+Recently, there are empirical support for this results () while other are still in debate.
+Besides this econometric validation, it is unclear how this upper-level property of non-residential investment emerge from lower level decisions.
+
+There is a long strand of agent based models that emphasizes other stylized facts regarding non-residential investment.
+Just to name a few of them, there is the relevance of technological progress and innovation, market structure and competition, firms' long-term survival condition among other (Cabalero, Taylor and Woodford).
+One of the properties reported by this literature is the emergence of non-residential investment lumpiness.
+In summary, firms expanding at different levels coexist, which implies the persistence of heterogeneity.
+These results suggests that there are non-trivial mesoeconomic level mechanisms that explain how microeconomic behavior of the firm generates aggregate pattern of non-residential investment.
+
+
+Based on this collection of empirical results, this paper intend to investigate which microeconomic-level assumptions reproduce the macroeconomic properties of fully-induced non-residential investment reported by SSM model.
+In order to do so, some additional steps are required to moving from a standard macroconomic Sraffian supermultiplier model to a microeconomic founded.
+The main contribution of this paper is to evaluate this microeconomics path towards an agent based SSM model.
+Thus, the article is organized as follows.
+Section \ref{sec:empirical:ch_super} reviews some stylized facts reported by the Sraffian supermultiplier framework, enhancing the list already mapped by AB literature.
+Section \ref{sec:model:ch_super} presents a parsimonious Stock-Flow consistent model with heterogeneous firms.
+The core mechanism are two switching procedures regarding expectations (Section \ref{sec:switching_expec}) and investment decisions (Section \ref{sec:switching_invest}).
+Additional, this section also show the required assumptions to convert the SSM model into a firm-level version.
+Next, on Section \ref{sec:validation:ch_super}, the baseline model is validated using a only-one-firm (oof) version in which investment is equal to the SSM aggregated version with adaptatinve expectations as a contrafactual.
+Section \ref{sec:experiments:ch_super} presents the experiments results in which the two switching mechanisms are triggered.
+Finally, Section \ref{sec:conclusion:ch_super} concludes the paper.
+
 
 \section{Empirical motivation}
-\label{sec:org0c80d03}
-\section{Review of theoretical literature}
-\label{sec:org2e9be18}
-\section{Model}
-\label{sec:org398c7f9}
+\label{sec:empirical:ch_super}
+\section{The model}
+\label{sec:model:ch_super}
+In this section, we present the conceptual model that will be simulated later in section SEÇÃO.
+This model represent an economy as simple as possible with heterogeneous firms while all the other institutional sectors are aggregated.
+At odds with conventional AB literature, we assume no thecnological progress to keep it simple\footnote{For an detailed description of innovations and thecnological change in AB models, see DOSI whom we refer to as a benchmark model.}.
+All other auxiliary assumption will follow AB literature as long as does not generate incompatibility with SSM closure.
+
+Before moving further to the description of every institutional sectors, we will present the hypothesis of this simplified economy.
+For simplicity, there is only one productive sector, no labor supply restriction, government nor external sector.
+As a consequence of the previous assumptions, the economy is composed by \(N\) homogeneous households and \(F\) heterogeneous firms\footnote{Aggregates variables will be represented by subscript \(N\) for households and \(F\) for firms.}.
+
+\subsection{Sequence of events}
+\label{sec:org4bd9a4d}
+
+
+
+\subsection{Production and distribution}
+\label{sec:org17bd5de}
+
+
+\subsubsection{Firms production plans}
+\label{sec:orgabd3b49}
+
+Each firm (\(f\)) investment plan (\(Y_{f,t}\), Equation \ref{EQ_Yf}) is defined accordingly to its expected real sales level (\(S^{e}_{f,t}\)) and a desired inventories to sales ratio \((\iota^{T} \in [0,1])\) -- exogenous defined and equal across firms -- to attend unexpected demand boosts as usual in \(K+S\) models.
+
+\begin{latex}
+\begin{equation}
+\label{Ch_super_EQ_Yf}
+Y_{f,t} = (1+\iota^{T})\cdot S^{e}_{f,t} - INV_{f,t-1}
+\end{equation}
+\end{latex}
+in which \(INV_{f,t-1}\) is the firm's inventories.
+In baseline scenario, we assume na\{$\backslash$``i\}ve expectational procedure in which expected sales level is equal to its lagged value.
+Alternatives expectational procedures will be discussed in section \ref{sec:switching}.
+After defining an production plan, firms calculates its desired capacitiy utilization rate (\(u^{d}_{f}\), Equation) as follows:
+
+\begin{latex}
+\begin{equation}
+u^{d}_{f} = \max\left[ 0, \min\left[ \frac{Y_{f,t}}{Y_{f,t}^{FC}}, 1 \right] \right]
+\end{equation}
+\end{latex}
+in which \(Y_{f,t}^{FC}\) is the firm's current output at the full capacity.
+Since we assume no labor restriction, full capacity output is define by its existing capital stock (\(K_{f,t-1}\)) given a maximum capital to output ratio (\(\nu\)) constant, exogenous and equal across firms:
+
+\begin{latex}
+\begin{equation}
+Y_{f,t}^{FC} = \frac{K_{f,t-1}}{\nu}
+\end{equation}
+\end{latex}
+Consequently, current firm's capacity utilization ratio is constrained do be equal or less than one since production is limited by physical capital.
+
+
+
+\subsubsection{Capital stock}
+\label{sec:org272a0bc}
+
+
+Since there is no thecnological progress nor innovation in the current version of this model, firms' capital stock only differs according to it lifetime (\(\kappa\)).
+Consequently, total capital stock is defined as the sum of different capital good vintage (\(k_{f}\)) as follows:
+
+\begin{latex}
+\begin{equation}
+K_{f} = \sum_{j=1}^{\kappa < \infty} k_{f,t-j}
+\end{equation}
+\end{latex}
+For simplicity, we assume no use depreciation, so each capital good will be replaced only if achieve its maximum lifetime.
+
+\subsubsection{Labor demand and wage bill}
+\label{sec:org9740179}
+
+In order to produce, firms use a Leontieff-type technology with a fixed combination between labor and physical capital.
+Given no a fixed labor productivity equally defined across workers, labor demand is a function (\(N^{d}_{f,t}\)) of each firm production plan at current capacity utilization level:
+
+\begin{latex}
+\begin{equation}
+N^{d}_{f,t} = u_{f,t}\cdot Y^{FC}_{f,t}
+\end{equation}
+\end{latex}
+
+Since our main purpose with this model is to evaluate emergence of firm's behavior, we assume single nominal wage for all workers (\(w_{t}\)) exogenously defined.
+Thus, each firm wage bill (\(W_{f}\)) is:
+\begin{latex}
+\begin{equation}
+W_{f,t} = N^{d}\cdot w_{f,t}
+\end{equation}
+\end{latex}
+In order to prevent asymptotic null induced consumption levels, we assume that at each time nominal wage is updated accordingly to previous inflation rate (\(\pi_{t-t}\)) which is the market-share weighted market price mean (Equation \ref{EQ_Infla})
+
+\begin{latex}
+\begin{equation}
+w_{t} = w_{t-1}\cdot(1+\pi_{t-1})
+\end{equation}
+\end{latex}
+\begin{latex}
+\begin{equation}
+\label{Ch_super_EQ_Infla}
+\pi_{t} = \sum_{f=1}^{F} ms_{f,t}\cdot p_{f,t}
+\end{equation}
+\end{latex}
+in which \(ms_{f}\) and \(p_{f,t}\) stands for firm's \(f\) market share and price respectively.
+
+
+
+\subsubsection{Pricing}
+\label{sec:org04ec4ca}
+
+We assume a simple pricing mechanism as possible which is defined as a mark-up (\(\theta_{f}\)) over direct unit labor costs (in this case, \(w_{t}\)):
+\begin{latex}
+\begin{equation}
+p_{f,t} = (1+\theta_{f})\cdot w_{t}
+\end{equation}
+\end{latex}
+At odds with \(K+S\) model, and a a result of our simplifying assumptions, there is no need to specify a mark-up law of motion equation\footnote{This is the case for \(K+S\) models because unit labor costs are not under firms strict control. Once we assume no technological progress nor innovation, uncertainty regarding labor productivity level is vanished.}.
+As we will further explore in section \ref{sec:switching}, expected market-share levels play a prominent role in investment decision and not in pricing as usual.
+
+
+
+\subsubsection{Household demand}
+\label{sec:org847df1f}
+
+
+In order to investigate the consequences of heterogeneous investment decisions in a Sraffian supermultiplier friendly framework, we a assume that household's consumption (\(C_{N}\)) is composed both by an induced (\(W_{N,t}\)) and by an autonomous component (\(Z_{t}\))\footnote{As discussed before, there is a multitude of non-capacitiy creating autonomous expenditures. Autonomous households consumption component was selected only to reduce the complexity of this model.}\textsuperscript{,}\,\footnote{Following \textcite{serrano_1995_Long}, we consider \(Z_{t}\) as an non-capacitiy creating autonomous expenditure because it does not depends on firms' production decisions. Additionally, since banking credit is endogenous, consumption loans does not affect credit availability for other sectors.}:
+
+\begin{latex}
+\begin{equation}
+C_{N} = c_{w}\cdot W_{N,t} + c_{p}\cdot FD_{t} + Z_{t}
+\end{equation}
+\end{latex}
+in which \(1 \geq c_{w} > c_{p} > 0\) are households marginal propensity to consume out of wages and out of distributed profits (\(FD\), discussed in Section \ref{sec:banking}) respectively while autonomous expenditure is given by its exogenously defined growth rate (\(g_{Z}\)):
+\begin{latex}
+\begin{equation}
+Z_{t} = (1+g_{Z})\cdot Z_{t-1}
+\end{equation}
+\end{latex}
+in which is financed either by financial wealth and by banking credit.
+
+Since we assume no households heterogeinity, consumption loans restriction has no economic meaning at the aggregate level.
+Differently from firms, we impose that households are not credit constrained\footnote{We are aware of the simplifications of these assumption, but our main propose here is to elaborate a simple model to discuss heterogeneity in the Sraffian Supermultiplier macroeconomic model.}.
+Implicitly, we assume that banking evaluation of households default probability (\(pr^{D}_{N,t}\)) is null.
+
+\subsubsection{Distribution of demand}
+\label{sec:org506a775}
+
+
+Considering previous assumptions, total demand of this economy (\(Y\)) is the sum of aggregate household consumption (\(C_{N}\)) and total firms' investment (\(I_{F}\)) which is the sum of individual firms investment decisions (\(I_{f}\)).
+\begin{latex}
+\begin{equation}
+\label{Ch_super_EQ_GDP_D}
+Y = C_{N} + \sum_{f}^{F} I_{f}
+\end{equation}
+\end{latex}
+As usual in AB models, distribution of total demand depends on relative competitiveness.
+Since there is no price diversity, we assume that firms relative competitiveness depends only on the level of unfilled demand (\(l_{f,t}\)), normalised to the whole sector’s weighted averages (\(\overline{l}_{f,t-1}\)):
+
+\begin{latex}
+\begin{equation}
+E_{f,t} = -\beta \frac{l_{f}}{\overline{l}_{f,t-1}}
+\end{equation}
+\end{latex}
+Following SILVERBERG E DOSI, effective market-share is defined accordingly to a quasi-replicator mechanism (Equation ) in which firms that were not able to fulfill its demand level will have a lower market-share:
+\begin{latex}
+\begin{equation}
+\label{Ch_super_EQ_Replicator}
+ms_{f,t} = ms_{f,t-1}\cdot \left(1+\chi \frac{E_{f,t} - \overline{E}_{t}}{\overline{E}_{t}}\right)
+\end{equation}
+\end{latex}
+in which \(\chi\) is a positive exogenous parameter and \(\overline{E}_{t}\) is the average competitiveness of the whole sector:
+\begin{latex}
+\begin{equation}
+\overline{E}_{t} = \sum_{f=1}^{F}E_{f,t}\cdot ms_{f,t-1}
+\end{equation}
+\end{latex}
+
+As will be discussed in section \ref{sec:switching}, effective market-share depends both on expected mark-share and effective investment decision, each one explained separately.
+Thus, investment emergence patterns depends on how firms adapts its expectations and changes (or not) its investment functions.
+
+\subsection{Banking sector, credit and financial implications}
+\label{sec:banking}
+\subsubsection{Firms' credit}
+\label{sec:orgf179a0d}
+
+\subsubsection{Household credit}
+\label{sec:org264aad4}
+
+\subsubsection{Profits and dividends}
+\label{sec:org398032e}
+
+\subsubsection{Interest rate and profit}
+\label{sec:org57f4711}
+
+\subsection{Switching mechanism}
+\label{sec:switching}
+This section provides the description for both expectational and investment decisions switching mechanism.
+In order to do so, we implement the same algorithm as \textcite{dosi_2020_RATIONAL,reissl_2021_Heterogeneousa} which is inspired in AUTORES empirical work.
+The idea of this mechanism is to evaluate if a expectational rule or an investment function dominates the others and which pattern emerges at the macroeconomic level.
+Thus, Section \ref{sec:switching_invest} describe the expectational mechanism while Section \ref{sec:switching_invest} applies this same principle to investment decisions.
+
+\subsubsection{Expectations}
+\label{sec:switching_expec}
+The expectational switching mechanism employed in this model is the same as \textcite{dosi_2020_RATIONAL,reissl_2021_Heterogeneousa}.
+Basically, firms alternates between expectational rules based on mean squared forecast errors (\(MSFE\)) values.
+Thus, this ``Ecological Heuristics Expectational Rule'' (EHER) allows us to evaluate how chances at the firm level have macroeconomic consequences in terms of economic stability, long-term growth and survival conditions for each firm.
+Considering the expectation of variable \(X\) (\(X^{e}\)), firms choose among the following alternatives rules:
+
+\begin{description}
+\item[{Naïve (\emph{naïve})}] \(X^{e}_{na\text{\"{i}}ve,t} = X_{t-1}\)
+\item[{Adaptative (\emph{ada})}] \(X^{e}_{ada,t} = X^{e}_{t-1} + \phi_{ada}\cdot (X_{t-1} - X^{e}_{t-1})\)
+\item[{Weak trend expectation (\emph{wtr})}] \(X^{e}_{wtr,t} = X_{t-1} + \phi_{wtr}\cdot (X_{t-1} - X_{t-2})\)
+\item[{Strong trend expectation (\emph{str})}] \(X^{e}_{str,t} = X_{t-1} + \phi_{str}\cdot (X_{t-1} - X_{t-2})\)
+\item[{Anchor and Adjustment (\emph{aa})}] \(X^{e}_{aa,t} = \phi_{aa}\cdot Anch + (1-\phi_{aa})\cdot X_{t-1} + (X_{t-1} - X_{t-2})\)
+\end{description}
+
+in which \(0 < \phi_{ada} < 1\), \(0 < \phi_{wtr} < \phi_{str}\) adjustment are parameters exgonously defined while \(Anch\) is expectational anchor which is the moving average of \(X\) as in \textcite{reissl_2021_Heterogeneousa}.
+
+At each period, firms compute it expectational variables and evaluate whether or not to change it accordingly to the last forecast error of \(X\) (\(U_{rule,t}, rule \in {na\text{\"i}ve}, ada, wtr, str, aa\)):
+\begin{latex}
+\begin{equation}
+\label{Ch_super_EQ_LFE}
+U_{rule,t} = - \left(\frac{X_{t-1} - X^{e}_{rule,t-1}}{X^{e}_{rule,t-1}}\right)^{2} + \eta\cdot U_{rule,t-1}
+\end{equation}
+\end{latex}
+where \(0 \leq \eta \leq 1\) is a memory parameter which measures weight of past errors.
+As in \textcite{dosi_2020_RATIONAL}, firms update the expectation rule with the probability \(n_{rule,t}\) in each period as follows:
+\begin{latex}
+\begin{equation}
+\label{Ch_super_EQ_rule_prob}
+n_{rule,t} = \delta\cdot n_{rule,t-1} + (1-\delta)\cdot \frac{\exp{\gamma\cdot U_{rule,t}}}{\sum_{rule}^{RULE}\exp{\gamma\cdot U_{rule,t}}}
+\end{equation}
+\end{latex}
+with \(\gamma \geq 0, \delta \leq 1\).
+The rationale behind Equation \ref{EQ_rule_prob} is that the probability to change the expecational rule depends on the persistence of the currently employed rule (\(\delta\)) and on the impact of the past performance (\(\gamma\)).
+
+Thus, as discussed before, this expecational switching mechanism allows us to explore the consequences of heterogenoeus firms computing different market-share expectations.
+In terms of the implementation of a microfounded Sraffian supermultiplier model, this rather simple procedure triggers different investment expenditures even though firms decide to invest using the same functional specification.
+Formally,
+
+
+\begin{latex}
+\begin{equation}
+I_{f,t} = h_{f,t} \cdot \left(ms^{e}_{rule,f,t} \sum_{f=1}^{F}Y_{f,t}\right)
+\end{equation}
+\end{latex}
+which is firm-level equivalent to the standard Sraffian supermultiplier model with only one firm (\(ms^{e}_{F} = ms_{F} = 1\)).
+Next, on Section REF, this microeconomic specification will compared with the only-one-firm (oof) contrafactual.
+Before moving to the model's validation, the next subsection will present the switching mechanism regarding investment decions.
+
+\subsubsection{Investment decisions}
+\label{sec:switching_invest}
+Similarly to the previous subsection, firms follow some heuristic rules in order to choose the specification of the investment function.
+The main divergence is that instead of computing the mean squared expectational forecast errors, firms evaluate its decision regarding unfilled demand.
+The rationale behind this rule is that firms investment decision depends on the divergences between effective and normal capacity utilization rate in order to attend unexpected demand STEINDL.
+Additionally, firms intend to achieve normal capacity utilization rate to reduce unnecessary costs as described by CICCONE.
+Before moving further, it is important to note that there is no consensus in the demand-led macroeconomic growth literature if normal capacity utilization is achieved\footnote{For a discussion about this, see REF}.
+However, it is unclear what is the macroeconomic emergence of different firm-level strategies regarding to reduce the discrepancies between effective and normal capacity utilization rate.
+
+The switching mechanism present in this subsection is relevant because it allows us to explore some opened questions:
+    (i) the aggregate investment function is a mirror of firm-level behavior or there are any properties that emerges?
+    (ii) is there a dominant investment decision strategy?
+    (iii) what are the consequences regarding desired capacity utilization rate in the presence of heterogeneous firms?
+In order to answer them, we implement the following investment decisions functions inspired by the current demand-led macroeconomic growth literature:
+
+\begin{description}
+\item[{Standard neo-Kaleckian  (\emph{NK})}] \(I_{NK,t} = \left(\overline{\beta}_{0} + \beta_{1}(u - u_{N})\right)\cdot K_{f,t-1}\)
+\item[{neo-Kaleckian supermultiplier (\emph{KSM})}] \(I_{KSM,t} = \left(\beta'_{0,t} + \beta_{1}(u - u_{N})\right)\cdot K_{f,t-1}\)
+\item[{Sraffian supermultiplier (\emph{SSM})}] \(I_{SSM,t} = h_{f,t}\cdot \left(ms^{e}_{t}\cdot \sum_{f=1}^{F}Y_{f}\right)\)
+\end{description}
+where \(\overline{\beta}_{0}\) is investment autonomous component which represents animals spirits, \(\beta_{1}\) is investment induced component, \(h_{f,t}\) is the marginal propensity to invest which evolves accordingly to discrepancies between effective and normal capacity utilization rate \cite{serrano_1995_Long,serrano_2017_Sraffianc}:
+\begin{latex}
+\begin{equation}
+\Delta h_{f,t} = \beta_{u}(u_{t} - u_{N})\cdot h_{f,t-1}
+\end{equation}
+\end{latex}
+in which \(\beta_{u}\) is an adjustment parameter while \(\beta'_{0}\) is flexible autonomous component proposed by \textcite{allain_2015_Tacklinga}.
+Adapting it in order do express commom elements across alternatives:
+\begin{latex}
+\begin{equation}
+\Delta \beta'_{0,t} = \beta_{u}\cdot\beta_{1}(u - u_{N})\cdot \beta'_{0,t-1}
+\end{equation}
+\end{latex}
+
+
+At each period, firms revise whether or not to change the current investment function.
+This procedure is based on the level of unfilled demand which is updated similarly to expectational performance (\(U^{D}_{inv,t}, inv \in [NK, KSM, SSM]\)):
+\begin{latex}
+\begin{equation}
+U^{D}_{inv,t} = - (l_{f,t-1})^{2} + \eta_{I}\cdot U^{D}_{inv,t-1}
+\end{equation}
+\end{latex}
+where \(\eta_{I}\) is a memory parameter as in Equation \ref{EQ_LFE}.
+Additionally, an alternative investment function is choosen with the probability \(n_{inv,t}\):
+
+
+\begin{latex}
+\begin{equation}
+\label{Ch_super_EQ_inv_prob}
+n_{inv,t} = \delta_{I}\cdot n_{inv,t-1} + (1-\delta_{I})\cdot \frac{\exp{\gamma_{I}\cdot U_{inv,t}}}{\sum_{inv}^{INV}\exp{\gamma_{I}\cdot U_{inv,t}}}
+\end{equation}
+\end{latex}
+in which parameters \(\delta_{I}, \gamma_{I}\) have the same meaning as in Equation \ref{EQ_rule_prob}.
+
+\subsection{Aggregating and closing the model}
+\label{sec:orgb035547}
+
+\subsubsection{Entry and exit of firms}
+\label{sec:org32c967e}
+\subsubsection{Closing the accounting}
+\label{sec:org27b166e}
+
+
 \section{Validation}
-\label{sec:org6a719f0}
+\label{sec:validation:ch_super}
 \section{Experiments}
-\label{sec:org0d861db}
+\label{sec:experiments:ch_super}
 \section{Concluding remarks}
-\label{sec:orgd5d68dd}
+\label{sec:conclusion:ch_super}
 
 \appendix
 \end{document}
